# basic_common_cpp

./: .gitignore  .gitmodules  ARITHMETIC.md  CMakeLists.txt  README.md  TODO.md  clean.sh  compile.sh  run_ci_tests.sh
.github/workflows/: ci.yml  ci_02_schedule_compile_test.yml  ci_05_schedule_number_theory_tests.yml  ci_08_schedule_eigen_latest.yml  ci_10_schedule_full_sweep.yml  ci_12_schedule_wasm.yml  ci_15_schedule_basic_tests.yml  ci_15_schedule_string_tests.yml  ci_20_schedule_matrix_tests.yml  ci_22_schedule_compile_test_windows.yml  number-theory-tests.yml
Examples/CubicField/: CubicFieldDisc_49  generate_approx.sage
Examples/Graphs/: Generate_GC_Example.g
Examples/QuadraticResidue/: ListQuadTest  TestQuadResidue.g
Examples/RealAlgebraicField/: CubicFieldDisc_49  QuadField2  generate_approx.sage
Examples/TestEquaSpaces/: Space1  Space2  Space3
ExternalLib/bliss/: CMakeLists.txt  bignum.hh  bliss.cc  bliss_C.cc  bliss_C.h  defs.cc  defs.hh  graph.cc  graph.hh  heap.cc  heap.hh  kqueue.hh  kstack.hh  orbit.cc  orbit.hh  partition.cc  partition.hh  timer.cc  timer.hh  uintseqhash.cc  uintseqhash.hh  utils.cc  utils.hh
ExternalLib/mpfrc++-3.6.8/: mpreal.h
ExternalLib/mpfrc++-3.6.8/example/: example.cpp
ExternalLib/nauty/: CMakeLists.txt  gtools.c  gtools.h  naugraph.c  naurng.c  naurng.h  nausparse.c  nausparse.h  nautil.c  nautinv.c  nautinv.h  naututil.c  naututil.h  nauty.c  nauty.h  schreier.c  schreier.h  sorttemplates.c  traces.c  traces.h
src_basic/: Analysis_EmpiricalDistribution.cpp  BasicThreadInclude.h  Basic_external_program.h  Basic_external_program_posix.h  Basic_external_program_windows.h  Basic_file.h  Basic_functions.h  Basic_interrupt.h  Basic_random.h  Basic_string.h  Basic_threading.h  Convert_Heuristic_to_Thompson_sampling.cpp  ExceptionEnding.h  ExceptionsFunc.h  Fuzzing_Heuristic_and_Thompson_sampling.cpp  Heuristic_ThompsonSampling.h  Heuristic_fct.h  Input_Thompson_sampling.nml  Makefile  Makefile_spec  Namelist.h  StorageHistorical.h  StorageSpace.h  Temp_common.h  TemplateTraits.h  Test_Basic_string_Optimizations.cpp  Test_EmpiricalDistribution.cpp  Test_EmpiricalDistridution.cpp  Test_Heuristic.cpp  Test_Namelist_Substr.cpp  Test_PresenceProgram.cpp  Test_String_Conversion.cpp  Test_String_Optimization.cpp  Test_String_Split.cpp  Test_String_Trim.cpp  Test_Thompson_sampling.cpp  Test_external_program.cpp  Test_filesystem.cpp  Test_hash_table.cpp  Test_namelist.cpp  (+11 more)
src_comb/: Block_CppIterator.cpp  Boost_bitset.h  Boost_bitset_kernel.h  COMB_Combinatorics.h  COMB_Combinatorics_buildset.h  COMB_Combinatorics_elem.h  COMB_Stor.h  COMB_Vectors.h  EnumerationCliques.cpp  EnumerationCliques_V1.cpp  EnumerationCliques_V1_fail_opti.cpp  EnumerationCliques_V2.cpp  EnumerationCliques_myrvold.cpp  EnumerationCliques_ordered_enum.cpp  EnumerationCliques_special_subcliques.cpp  IterFace.cpp  Makefile  SerializeFace.cpp  SerializeVectface.cpp  Test_SetCppIterator.cpp  Timing_HashMap.cpp  Vector_Face_iterator.cpp
src_graph/: GRAPH_Bindings.h  GRAPH_BitsetType.h  GRAPH_CanonicComputation.cpp  GRAPH_ComputeAutGroup.cpp  GRAPH_EnumerateDistanceSembedding.cpp  GRAPH_EnumerateShortCycles.cpp  GRAPH_GraphicalBasic.h  GRAPH_GraphicalFunctionEquivariant.h  GRAPH_GraphicalFunctions.h  GRAPH_Kconnectivity.cpp  GRAPH_RandomExpander.h  GRAPH_TestCanonicComputation.cpp  GRAPH_bliss.h  GRAPH_nauty.h  GRAPH_traces.h  Makefile  Makefile_spec  TestPadic.cpp
src_hypergraph/: Hypergraph_basic.h
src_linbox/: Makefile  nullspacebasis_rat.cpp
src_matrix/: AnalysisSingMat.cpp  ColHermiteNormalForm.cpp  ComputeChromaticLowerBounds.cpp  ComputePointer.cpp  ComputeTranslationClasses.cpp  DeterminantMat.cpp  DeterminantMatHadamard.cpp  DeterminantMatMod.cpp  EigenBoostNumTraits.h  IntersectionLattice.cpp  IsotropicMatMod.cpp  MAT_Matrix.h  MAT_MatrixDeterminant.h  MAT_MatrixEigen.h  MAT_MatrixFLT.h  MAT_MatrixFund.h  MAT_MatrixInt.h  MAT_MatrixMod.h  MAT_MatrixNullspace.h  MAT_MatrixProjection.h  MAT_MatrixSerialization.h  MAT_Matrix_Fp.h  MAT_Matrix_SubsetSolver.h  MAT_NonUniqueRescale.h  MAT_SparseMatrix.h  MAT_Tensor.h  MAT_functions.h  Makefile  Makefile_spec  MatrixLinbox.h  MatrixSubsetSolver.cpp  MatrixTypes.h  MatrixTypesSparse.h  Matrix_As_Set.cpp  Matrix_As_SetPosScal.cpp  NonUniqueScaleToInteger.cpp  NullspaceComputation.cpp  NullspaceComputationExperiment.cpp  NullspaceComputationLinbox.cpp  NullspaceComputationQ5.cpp  (+40 more)
src_number/: BasicNumberTypes.h  Bench_fma_strategy.cpp  ComputeQuadraticResidue.cpp  Factorize.cpp  Factorize_help.cpp  Fp.h  FpTest.cpp  Generic_and_C_algo.h  InputOutput.h  Makefile  Makefile_linbox  Makefile_spec  MatchingTypes.h  Nearest.cpp  NumberGivaro.h  NumberTheory.h  NumberTheoryBoost.h  NumberTheoryBoostCppInt.h  NumberTheoryBoostGmpInt.h  NumberTheoryCommon.h  NumberTheoryGeneric.h  NumberTheoryGmp.h  NumberTheoryMultiType.h  NumberTheoryPadic.h  NumberTheoryQuadField.h  NumberTheoryRational.h  NumberTheoryRealField.h  NumberTheorySafeInt.h  NumberTheoryThreshold.h  PivotCost.h  PracticalInf.cpp  PrintStaticInfo.cpp  QuadField.h  QuadFieldTest.cpp  QuoIntFcts.h  RationalTest.cpp  ReadValueString.cpp  RealCubicFieldTest.cpp  ResidueQuotient.h  SafeInteger.h  (+54 more)
src_number/OLD/: NumberGivaro.h  test_mpz_givaro.cpp
src_sat/: Coloring.h  GenerateInitial.g  Makefile  SATsolver.h  compute_chromatic_number.cpp
src_svg/: SVGfunctions.h
src_wasm/: Test_wasm_cpp_int.cpp  Test_wasm_matrix.cpp  build.sh
